--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                       
                 <div class = "gridwrapper_info">
-                    <div class="box mytitle">designer & developer <br>project manager
+                    <div class="box mytitle">designer & developer
                         </div>
                     <div class="box myname">Janine B. Fernandez
                         </div>
@@ -79,13 +79,12 @@
 <div id="aboutme_des">
         <p id="header_contact">ABOUT ME</p>
         <p id="aboutme_content">
-            <br> I grew up drawing on dirt in the province. As I move to a more modern community,
-            <br> my interest in technology blossomed. Art and the digital world colliding is a field
-            <br> with endless outcomes. I aim to surround myself in an environment that will foster 
-            <br> my interest and growth. As I learn new things, I strive to use my knowledge and
-            <br> skills in creating something new or better yet, build on foundation. 
+            <br> Art and the digital world colliding is a field with endless outcomes. I aim to
+            <br> surround myself in an environment that will foster my interest and growth.
+            <br> As I learn new things, I strive to use my knowledge and skills in creating 
+            <br> something new or build on a solid foundation. 
             <br>
-            <br><a href="https://www.dropbox.com/s/ueqdqvblpoalimy/Janine_Fernandez_Resume_011319.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>
+            <br><a href="https://www.dropbox.com/s/2bxco2lkplo126d/Janine_Fernandez_Resume_021119.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>
             <br>
             <br>
         </p>
