--- a/pages/projects.html
+++ b/pages/projects.html
@@ -47,7 +47,7 @@
         </div><!--gridwrapper ends-->
 <!--CONTENT BEGINS-->
 <h2 class="page_title">Projects</h2>
-<div id="project_container">
+<div class="project_container">
 <!--PROJECTS-->
     <a class="trigger_popup_fricc"><img id="car_icon" src="../images/projects/car_meet/car-icon.png"></a>
     <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/projects/cards/card-icon.png"></a>
