--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 <div id="aboutme_des">
         <p id="header_contact">ABOUT ME</p>
         <p id="aboutme_content">
-            <br> Art and the digital world colliding is a field with endless outcomes. I aim to
-            <br> surround myself in an environment that will foster my interest and growth.
-            <br> As I learn new things, I strive to use my knowledge and skills in creating 
-            <br> something new or build on a solid foundation. 
+            Art and the digital world colliding is a field with endless outcomes. 
+            I aim to surround myself in an environment that will foster my interest and growth.
+            As I learn new things, I strive to use my knowledge and skills in creating 
+            something new or build on a solid foundation. 
             <br>
             <br><a href="https://www.dropbox.com/s/2bxco2lkplo126d/Janine_Fernandez_Resume_021119.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>
             <br>
@@ -93,9 +93,9 @@
 <div id="contactme_des">
         <p id="header_contact">CONTACT ME</p>
         <p id="contactme_content">
-            <br> Please contact me directly at: 
+            <br>Please contact me directly at: 
             <br>janinebfernandez@gmail.com
-            <br> I'd would love to hear from you!
+            <br>I'd would love to hear from you!
             <br>
             <br><a href="https://www.linkedin.com/in/janinebfernandez" target="_blank" style="font-weight:bold;">LinkedIn</a>
             <br>
