--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--GOOGLE WEBMASTER TOOL START-->
     <meta name="google-site-verification" content="ZT-j7V2ZNz3gB6tCpHdm-MlS_cqu8zFKQktu_RtQhDQ" />
     <!--GOOGLE WEBMASTER TOL ENDS-->
-    <title>Janine Fernandez Portfolio 2018</title>
+    <title>Janine Fernandez Portfolio 2019</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
@@ -59,12 +59,12 @@
             <div class = "gridwrapper_content">
                 <div class="box mylogo">
                     <p id = "logo_image">
-                        <img src="images/j.ix-logo.png" alt="Janine Fernandez Logo">
+                        <img src="images/logo-2019-mini.png" alt="Janine Fernandez Logo">
                     </p> 
                     </div>
                       
                 <div class = "gridwrapper_info">
-                    <div class="box mytitle">designer & developer
+                    <div class="box mytitle">designer & developer - Project Manager
                         </div>
                     <div class="box myname">Janine B. Fernandez
                         </div>
@@ -84,7 +84,7 @@
             As I learn new things, I strive to use my knowledge and skills in creating 
             something new or build on a solid foundation. 
             <br>
-            <br><a href="https://www.dropbox.com/s/2bxco2lkplo126d/Janine_Fernandez_Resume_021119.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>
+            <!---<br><a href="https://www.dropbox.com/s/2bxco2lkplo126d/Janine_Fernandez_Resume_021119.pdf?dl=0" target="_blank" style="font-weight:bold;">RESUME</a>-->
             <br>
             <br>
         </p>
