--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     <div class = "gridwrapper">
         <div class="box header_welcome">welcome</div>
         <div class="box header_pagename">
-            <a href="#"><p>Janine B. Fernandez | <img src="images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
+            <a href="#"><p>Janine B. Fernandez | <!--<img src="images/logo-2019-mini.png" alt="Janine Fernandez Logo"> | -->Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
+                <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="images/logo-2019-mini.png" alt="Janine Fernandez Logo"></a>
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/icons/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="images/icons/youtube-icon.png" alt="Flickr"></a>
                 <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="images/icons/instagram-icon.png" alt="Instagram"></a>
@@ -94,7 +95,7 @@
         <p id="header_contact">CONTACT ME</p>
         <p id="contactme_content">
             <br>Please contact me directly at: 
-            <br>janinebfernandez@gmail.com
+            <br id="my_email">janinebfernandez@gmail.com</br>
             <br>I'd would love to hear from you!
             <br>
             <br><a href="https://www.linkedin.com/in/janinebfernandez" target="_blank" style="font-weight:bold;">LinkedIn</a>
