--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -33,9 +33,10 @@
     <div class = "gridwrapper">
         <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/icons/home-icon.png" alt="j.ix Home"></a></div>
         <div class="box header_pagename">
-            <a href="../index.html"><p>Janine B. Fernandez | <img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | Porfolio</p></a>
+            <a href="../index.html"><p>Janine B. Fernandez | <!--<img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | -->Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
+                <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="../images/logo-2019-mini.png" alt="Janine Fernandez Logo"></a>
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Flickr"></a>
                 <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
