--- a/pages/photography.html
+++ b/pages/photography.html
@@ -51,37 +51,102 @@
 </div>-->
 <div class="row">
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4846/31850406848_a613e5615f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/balance-icon.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4803/31850428788_0767f7ecf2_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/beyond-icon.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1909/45671424462_d6175a844e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/purple-hive-icon.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1971/31850376608_dfb41f7a7e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/sunset-icon.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1966/45721911251_bf254dc6c4_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/boat-house-icon.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/princess-icon.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4853/44997209154_d0abb0ed2f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/beach-side-icon.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm5.staticflickr.com/4815/31850480948_0baa8037c6_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+        <img src="../images/photography/icon/trip-icon.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
     </div>
     <div class="column">
-        <img src="https://farm2.staticflickr.com/1969/44807998995_b378d1db08_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+        <img src="https://farm5.staticflickr.com/4846/31850406848_a613e5615f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
     </div>
+    <div class="column">
+        <img src="https://farm5.staticflickr.com/4803/31850428788_0767f7ecf2_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+        <img src="https://farm2.staticflickr.com/1909/45671424462_d6175a844e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+        <img src="https://farm2.staticflickr.com/1971/31850376608_dfb41f7a7e_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(12)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+        <img src="https://farm2.staticflickr.com/1966/45721911251_bf254dc6c4_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+        <img src="https://farm5.staticflickr.com/4813/45722139761_a5c9586623_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+        <img src="https://farm5.staticflickr.com/4853/44997209154_d0abb0ed2f_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(15)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+        <img src="https://farm5.staticflickr.com/4815/31850480948_0baa8037c6_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(16)" class="hover-shadow cursor">
+    </div>
+    <div class="column">
+        <img src="https://farm2.staticflickr.com/1969/44807998995_b378d1db08_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(17)" class="hover-shadow cursor">
+    </div>
+
 </div>
 
 <div id="myModal" class="modal">
   <span class="close cursor" onclick="closeModal()">&times;</span>
   <div class="modal-content">
+
+    <div class="mySlides">
+      <div class="numbertext">Balance</div>
+      <img src="../images/photography/balance.jpg" style="width:80%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">Beyond</div>
+      <img src="../images/photography/beyond.jpg" style="width:80%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">Purple Hive</div>
+      <img src="../images/photography/purple-hive.jpg" style="width:80%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">Sunset Community</div>
+      <img src="../images/photography/sunset.jpg" style="width:80%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">Boat House</div>
+      <img src="../images/photography/boat-house.jpg" style="width:80%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">Princess</div>
+      <img src="../images/photography/princess.jpg" style="width:80%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">Beach Side</div>
+      <img src="../images/photography/beach-side.jpg" style="width:80%">
+    </div>
+
+    <div class="mySlides">
+      <div class="numbertext">Trip</div>
+      <img src="../images/photography/trip.jpg" style="width:80%">
+    </div>
 
     <div class="mySlides">
       <div class="numbertext">Over the Fire</div>
@@ -149,8 +214,8 @@
             <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="graphics.html">Graphics</a></li>
             <li id = "projects"><a href="projects.html">Projects</a></li>
-            <li id = "logo"><!--<a href="url">Logo</a>--></li>
-            <li id = "type"><!--<a href="url">Type</a>--></li>
+            <li id = "logo"><a href="logo.html">Logo</a></li>
+            <li id = "type"><a href="type.html">Type</a></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
             <li id = "sound"><!--<a href="url">Sound</a>--></li>
         </div><!--dropdown ends-->
