--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,12 +2,13 @@
 <!--PORTFOLIO PAGE - PROJECTS PAGE - HTML-->
 <!DOCTYPE html>
 <head>
-    <title>Janine Fernandez Portfolio 2018</title>
+    <title>Janine Fernandez Portfolio 2019</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
     <!--Javascript-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <!--Popup-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="../js/toggle.js"></script>
@@ -24,7 +25,11 @@
 
     <!--Icon for Mobile Nav-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+<style>
+.project_container a{
+    padding:20px;
+}
+</style>
 </head>
 
 <body>
@@ -52,6 +57,9 @@
 <!--PROJECTS-->
     <a class="trigger_popup_fricc"><img id="car_icon" src="../images/projects/car_meet/car-icon.png"></a>
     <a class="trigger_popup_fricc_2"><img id="car_icon" src="../images/projects/cards/card-icon.png"></a>
+    <a href="projects/golf_course.html"><img id="car_icon" src="../images/projects/golf_course/LMGC-icon-small.png"></a>
+    <a href="projects/coffee_infographics.html"><img id="car_icon" src="../images/projects/coffee_info/Coffee-inforgraph-icon-small.png"></a>
+    <a href="projects/zodiac_sign.html"><img id="car_icon" src="../images/projects/zodiac_sign/zodiac-icon-small.png"></a>
 <!--POP UP-->
 <!--Car_Meet Pop up-->
 <div class="hover_bkgr_fricc">
@@ -97,8 +105,8 @@
             <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="graphics.html">Graphics</a></li>
             <li id = "projects"><a href="projects.html">Projects</a></li>
-            <li id = "logo"><!--<a href="url">Logo</a>--></li>
-            <li id = "type"><!--<a href="url">Type</a>--></li>
+            <li id = "logo"><a href="logo.html">Logo</a></li>
+            <li id = "type"><a href="type.html">Type</a></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
             <li id = "sound"><!--<a href="url">Sound</a>--></li>
         </div><!--dropdown ends-->
