--- a/pages/uxui.html
+++ b/pages/uxui.html
@@ -2,7 +2,7 @@
 <!--PORTFOLIO PAGE - UXUI - HTML-->
 <!DOCTYPE html>
 <head>
-    <title>Janine Fernandez Portfolio 2018</title>
+    <title>Janine Fernandez Portfolio 2019</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
@@ -36,7 +36,7 @@
             <!--Social media accounts-->
             <div class = "socialmedia">
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/linkedin-icon.png" alt="LinkedIn"></a>
-                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/instagram-icon.png" alt="Instagram"></a>
             </div>
         </div>
         </div><!--gridwrapper ends-->
