--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="images/logo-2019-mini.png" alt="Janine Fernandez Logo"></a>
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/icons/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="images/icons/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="images/icons/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="images/icons/instagram-icon.png" alt="Instagram"></a>
                 <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="images/icons/flickr-icon.png" alt="Flickr"></a>
             </div>
         </div>
@@ -118,8 +118,8 @@
             <li id = "wd"><a href="pages/webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="pages/graphics.html">Graphics</a></li>
             <li id = "projects"><a href="pages/projects.html">Projects</a></li>
-            <li id = "logo"><!--<a href="url">Logo</a>--></li>
-            <li id = "type"><!--<a href="url">Type</a>--></li>
+            <li id = "logo"><a href="pages/logo.html">Logo</a></li>
+            <li id = "type"><a href="pages/type.html">Type</a></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
             <li id = "sound"><!--<a href="url">Sound</a>--></li>
         </div><!--dropdown ends-->
