--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -2,7 +2,7 @@
 <!--PORTFOLIO PAGE - WEB DESIGN - HTML-->
 <!DOCTYPE html>
 <head>
-    <title>Janine Fernandez Portfolio 2018</title>
+    <title>Janine Fernandez Portfolio 2019</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
@@ -39,7 +39,7 @@
                 <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="../images/logo-2019-mini.png" alt="Janine Fernandez Logo"></a>
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Flickr"></a>
-                <a href="https://www.instagram.com/j.ix_redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
+                <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
                 <a href="https://www.flickr.com/photos/janinebfernandez/" target = "_blank"><img src="../images/icons/flickr-icon.png" alt="Flickr"></a>
             </div>
         </div>
@@ -158,8 +158,8 @@
             <li id = "wd"><a href="webdesign.html">Web Design</a></li>
             <li id = "graphics"><a href="graphics.html">Graphics</a></li>
             <li id = "projects"><a href="projects.html">Projects</a></li>
-            <li id = "logo"><!--<a href="url">Logo</a>--></li>
-            <li id = "type"><!--<a href="url">Type</a>--></li>
+            <li id = "logo"><a href="logo.html">Logo</a></li>
+            <li id = "type"><a href="type.html">Type</a></li>
             <li id = "animate"><!--<a href="url">Animate</a>--></li>
             <li id = "sound"><!--<a href="url">Sound</a>--></li>
         </div><!--dropdown ends-->
