Zodiac Sign Project
New Project added

--- a/pages/projects/coffee_infographics.html
+++ b/pages/projects/coffee_infographics.html
@@ -174,7 +174,7 @@ opacity:1;
 <h2 class="page_title">Coffee Basic</h2>
 <div class="project_container">
 <div id="c3_wrapper">
-    <h3>What's your favorite craving?</h3>
+    <h3>What's your craving?</h3>
 
 <!--SLIDESHOW CONTENT-->
 <div class="c3-container">
