Home page - update
Responsive fix

--- a/index.html
+++ b/index.html
@@ -93,13 +93,12 @@
 </div>
 <div id="contactme_des">
         <p id="header_contact">CONTACT ME</p>
-        <p id="contactme_content">
-            <br>Please contact me directly at: 
-            <br id="my_email">janinebfernandez@gmail.com</br>
-            <br>I'd would love to hear from you!
-            <br><a href="https://www.linkedin.com/in/janinebfernandez" target="_blank" style="font-weight:bold;">LinkedIn</a>
-            <br>
-        </p>
+        <div id="contactme_content">
+            <p>Please contact me directly at: </p>
+            <p id="my_email">janinebfernandez@gmail.com</p>
+            <p>I'd would love to hear from you!</p>
+            <p><a href="https://www.linkedin.com/in/janinebfernandez" target="_blank" style="font-weight:bold;">LinkedIn</a></p>
+        </div>
         <p id="close_contact">X</p>
 </div>
 <!--ABOUT ME & SAY HELLO ENDS-->
