--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--GOOGLE WEBMASTER TOOL START-->
     <meta name="google-site-verification" content="ZT-j7V2ZNz3gB6tCpHdm-MlS_cqu8zFKQktu_RtQhDQ" />
     <!--GOOGLE WEBMASTER TOL ENDS-->
-    <title>Janine Fernandez Portfolio 2019</title>
+    <title>Janine B. Fernandez Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
@@ -34,7 +34,25 @@
 
     <!--Icon for Mobile Nav-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+   <style>
+
+   .nav{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    padding: 2% 0;
+    margin: auto;
+    text-align: center;
+    font-size: 10px;
+}
+
+.nav li{
+    display: inline;
+    padding: 0 2em;
+    margin: 25px;
+    font-weight: bold;
+}
+   </style> 
 </head>
 
 <body>
@@ -48,7 +66,7 @@
             <a href="#"><p>Janine B. Fernandez | <!--<img src="images/logo-2019-mini.png" alt="Janine Fernandez Logo"> | -->Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
-                <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="images/logo-2019-mini.png" alt="Janine Fernandez Logo"></a>
+                <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="images/logo-2019-mini.png" alt="Janine B. Fernandez Logo"></a>
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="images/icons/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="images/icons/youtube-icon.png" alt="Flickr"></a>
                 <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="images/icons/instagram-icon.png" alt="Instagram"></a>
@@ -60,7 +78,7 @@
             <div class = "gridwrapper_content">
                 <div class="box mylogo">
                     <p id = "logo_image">
-                        <img src="images/logo-2019-mini.png" alt="Janine Fernandez Logo">
+                        <img src="images/logo-2019-mini.png" alt="Janine B. Fernandez Logo">
                     </p> 
                     </div>
                       
