--- a/pages/webdesign.html
+++ b/pages/webdesign.html
@@ -2,7 +2,7 @@
 <!--PORTFOLIO PAGE - WEB DESIGN - HTML-->
 <!DOCTYPE html>
 <head>
-    <title>Janine Fernandez Portfolio 2019</title>
+    <title>Janine B. Fernandez Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
 
@@ -33,10 +33,10 @@
     <div class = "gridwrapper">
         <div class="box header_welcome socialmedia"><a href="../index.html" target = ""><img src="../images/icons/home-icon.png" alt="j.ix Home"></a></div>
         <div class="box header_pagename">
-            <a href="../index.html"><p>Janine B. Fernandez | <!--<img src="../images/j.ix-logo.png" alt="Janine Fernandez Logo"> | -->Porfolio</p></a>
+            <a href="../index.html"><p>Janine B. Fernandez | <!--<img src="../images/j.ix-logo.png" alt="Janine B. Fernandez Logo"> | -->Porfolio</p></a>
             <!--Social media accounts-->
             <div class = "socialmedia">
-                <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="../images/logo-2019-mini.png" alt="Janine Fernandez Logo"></a>
+                <a href="https://janinebfernandez.github.io/Portfolio/index.html#" target = ""><img style="width:3em" src="../images/logo-2019-mini.png" alt="Janine B. Fernandez Logo"></a>
                 <a href="https://www.linkedin.com/in/janinebfernandez" target = "_blank"><img src="../images/icons/linkedin-icon.png" alt="LinkedIn"></a>
                 <a href="https://www.youtube.com/channel/UCWjmkdK2poOYL6IYrYUskwQ/featured?disable_polymer=1" target = "_blank"><img src="../images/icons/youtube-icon.png" alt="Flickr"></a>
                 <a href="https://www.instagram.com/j.ix.redefine9" target = "_blank"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
@@ -46,7 +46,7 @@
         </div><!--gridwrapper ends-->
 
   <!--GALLERY BEGINS-->
-<h2 class="page_title">UXUI & Web Designs</h2>
+<h2 class="page_title">Web Designs</h2>
 <div class="row">
     <div class="column">
         <img src="https://farm8.staticflickr.com/7842/45857134944_5ab132a1a6_q_d.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -143,16 +143,15 @@
     </div>
 
 <!--GALLERY ENDS-->          
-
-
 </div><!--gridwrapper ends-->
 </div><!--bodywrapper ends-->
 </div><!--wrapper_body ENDS-->
 
 <!--NAV DROPDOWN-->
-<div class="box nav dropdown">
+<div id="nav_container">
+<div class="box nav dropdown float_center">
         <button onclick="myFunction()"><i class="fa fa-bars dropbtn"></i></button>
-        <div id="myDropdown" class="dropdown-content">
+        <div id="myDropdown" class="dropdown-content child">
             <li id = "video"><!--<a href="url">Video</a>--></li>
             <li id = "photo"><a href="photography.html">Photography</a></li>
             <li id = "wd"><a href="webdesign.html">Web Design</a></li>
@@ -164,6 +163,7 @@
             <li id = "sound"><!--<a href="url">Sound</a>--></li>
         </div><!--dropdown ends-->
         </div><!--nav ends-->
+    </div><!--nav ends-->
 </body>
 
 </html>
